fixing open api codegen problmes and started integrating the api into the application
