# server/docs/swagger.json
@@ -437,7 +437,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/fieldtype.FieldType"
                         }
                     }
                 }
@@ -585,6 +585,12 @@
                 },
                 "deletedAt": {
                     "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "fieldTypes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/fieldtype.FieldType"
+                    }
                 },
                 "id": {
                     "type": "integer"
